--- a/Aplicacion/Backend/SolucionesWiga/SolucionesWiga.csproj
+++ b/Aplicacion/Backend/SolucionesWiga/SolucionesWiga.csproj
@@ -10,6 +10,9 @@
     <Reference Include="MySql.Data">
       <HintPath>C:\Program Files (x86)\MySQL\MySQL Connector Net 8.0.28\Assemblies\net6.0\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.EntityFrameworkCore">
+      <HintPath>C:\Program Files (x86)\MySQL\MySQL Connector Net 8.0.28\Assemblies\net6.0\MySql.EntityFrameworkCore.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
