--- a/Aplicacion/Backend/SolucionesWiga/SolucionesWiga.csproj
+++ b/Aplicacion/Backend/SolucionesWiga/SolucionesWiga.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.28" />
+    <PackageReference Include="MySqlConnector" Version="2.1.8" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MySql.Data">
